fix nav alignment
git-svn-id: https://svn.library.cornell.edu/etc3theme/trunk@10 41884976-462d-4036-b692-2b3efe40c1cd

--- a/stylesheets/etc/_navigation.scss
+++ b/stylesheets/etc/_navigation.scss
@@ -6,7 +6,7 @@
 }
 .navbar {
 	margin-bottom: 0;
-	.nav {
+	.navbar-nav {
 		margin: 25px 0 0 -25px;
 		li {
 			float: none;
